# testbc

./: CMakeLists.txt  build.bat
jni/: Android.mk  Application.mk  main.cpp
